--- a/blogskin/html.html
+++ b/blogskin/html.html
@@ -1025,6 +1025,9 @@
 <script>
 function makeIds () { // eslint-disable-line
   var content = document.querySelector('.article-view')
+	if(!content) {
+		return;
+	}
   var headings = content.querySelectorAll('h1, h2, h3, h4, h5, h6, h7')
   var headingMap = {}
 
@@ -1183,7 +1186,7 @@ function getModifiedDate(){
 				}
 			}
 			var fileName = ''
-			if(language && prevText && prevText.endsWith("()") || prevText.toUpperCase().endsWith("."+language.toUpperCase())) {
+			if(language && prevText && (prevText.endsWith("()") || prevText.toUpperCase().endsWith("."+language.toUpperCase()))) {
 				fileName = prevText;
 				$(this).prev().remove();
 			}
