chores: rearrange margin&padding

--- a/blogskin/html.html
+++ b/blogskin/html.html
@@ -287,14 +287,14 @@
                    style="background-image:url('')">
                 <div class="inner-header">
                   <div class="box-meta">
-                    <p class="category">[##_article_rep_category_##]</p>
                     <h1 class="title-article">[##_article_rep_title_##]</h1>
+                    <p class="category"><a href="[##_article_rep_category_link_##]">[##_article_rep_category_##]</a></p>
                     <div class="box-info">
                       <!--
                       <span class="writer">[##_article_rep_author_##]
                           </span>
                       -->
-                      📝 작성 :&nbsp;<span class="date">[##_article_rep_date_year_##].[##_article_rep_date_month_##].[##_article_rep_date_day_##]</span>
+                      📝 최초작성 :&nbsp;<span>[##_article_rep_date_year_##].[##_article_rep_date_month_##].[##_article_rep_date_day_##]</span>
                       &emsp;⏱ 수정 :&nbsp;<span id="mod_date"></span> &emsp;
                       <span class="eta"></span>
                       <!-- google translate -->
