style: Blog skin edited
- alink color
- related postings format

--- a/blogskin/html.html
+++ b/blogskin/html.html
@@ -335,33 +335,21 @@
                         <a href="[##_article_next_link_##]"><span>다음글</span><strong>[##_article_next_title_##]</strong></a>
                       </s_article_next>
                     </li>
-                  </ul>
-                </div>
-
-                <s_article_related>
-                  <!-- article-related -->
-                  <div class="article-related">
-                    <p class="title-footer">관련글</p>
-                    <ul class="list-related">
+                    <hr/>
+                    <s_article_related>
                       <s_article_related_rep>
                         <li class="item-related">
+                          <span>관련글</span>
                           <a href="[##_article_related_rep_link_##]" class="link-related">
-                            <span class="thumnail"
-                                  style="background-image:url('<s_article_related_rep_thumbnail>[##_article_related_rep_thumbnail_link_##]</s_article_related_rep_thumbnail>')"></span>
-                            <div class="box_content">
-                              <strong>[##_article_related_rep_title_##]</strong>
-                              <span class="date">[##_article_related_rep_date_##]</span>
-                            </div>
+                              <span>[##_article_related_rep_title_##]</strong>
                           </a>
                         </li>
                       </s_article_related_rep>
-                    </ul>
-                  </div>
-                  <!-- // article-related -->
-                </s_article_related>
+                    </s_article_related>
+                  </ul>
+                </div>
 
                 <!-- article-reply -->
-
                 <s_rp>
                   <!-- area-reply -->
                   <div class="area-reply">
@@ -1020,15 +1008,6 @@
       <div>
         <p class="text-info">[##_var_footerCopyright_##]</p>
         <address>[##_var_footerAddress_##]</address>
-      </div>
-
-      <div class="box-site">
-        <button type="button" data-toggle="xe-dropdown" aria-expanded="false">관련사이트</button>
-        <ul>
-          <s_link_rep>
-            <li class="on"><a href="[##_link_url_##]" target="_blank">[##_link_site_##]</a></li>
-          </s_link_rep>
-        </ul>
       </div>
     </div>
 
