BlogSkin update: adsense-manual, hide original reply section

--- a/blogskin/html.html
+++ b/blogskin/html.html
@@ -34,8 +34,8 @@
       gtag('js', new Date());
       gtag('config', 'G-78XZFQGFTN');
   </script>
-  <script data-ad-client="ca-pub-8627654774354950" async
-          src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8627654774354950"
+     crossorigin="anonymous"></script>
   <meta name="naver-site-verification" content="0c22e3f03cba99c563fc4f90743e8699d2f4979c"/>
   <meta name="google-site-verification" content="M8x4poE68Fuinu22Y8TqYML-sgvjPZq9ihSN-JR7a5g"/>
   <meta name="robots" content="ALL">
@@ -108,7 +108,7 @@
                 [##_title_##]
               </s_not_var_logoImage>
             </a>
-            <a href="https://github.com/Shane-Park" target='_blank' class="link-icon">
+            <a href="https://github.com/ShanePark" target='_blank' class="link-icon">
               <i class="fab fa-github"></i>
             </a>
           </h1>
@@ -305,12 +305,24 @@
               </div>
               <!-- 에디터 영역 -->
               <div class="article-view">
+                <ins class="adsbygoogle"
+                    style="display:block; text-align:center;"
+                    data-ad-layout="in-article"
+                    data-ad-format="fluid"
+                    data-ad-client="ca-pub-8627654774354950"
+                    data-ad-slot="9826884942">
+                </ins>
                 [##_article_rep_desc_##]
+                <ins class="adsbygoogle"
+                  style="display:block; text-align:center;"
+                  data-ad-layout="in-article"
+                  data-ad-format="fluid"
+                  data-ad-client="ca-pub-8627654774354950"
+                  data-ad-slot="6543064293"></ins>
               </div>
 
               <!-- article-footer -->
               <div class="article-footer">
-
                 <s_tag_label>
                   <!-- article-tag -->
                   <!--
@@ -335,7 +347,6 @@
                         <a href="[##_article_next_link_##]"><span>다음글</span><strong>[##_article_next_title_##]</strong></a>
                       </s_article_next>
                     </li>
-                    <hr/>
                     <s_article_related>
                       <s_article_related_rep>
                         <li class="item-related">
@@ -351,51 +362,12 @@
 
                 <!-- article-reply -->
                 <s_rp>
-                  <!-- area-reply -->
                   <div class="area-reply">
-                    <s_rp_container>
-                      <ul class="list-reply">
-                        <s_rp_rep>
-                          <li id='[##_rp_rep_id_##]' class="item-reply [##_rp_rep_class_##]">
-                            <span class="thumbnail" style="background-image:url('[##_rp_rep_logo_##]')"></span>
-                            <div class="box-content">
-                              <div class="box-meta">
-                                <strong>[##_rp_rep_name_##]</strong>
-                                <span class="date">[##_rp_rep_date_##]</span>
-                              </div>
-                              <p class="text">[##_rp_rep_desc_##]</p>
-                              <a href="#" class="link-comment" onclick="[##_rp_rep_onclick_reply_##]">답글</a>
-
-                            </div>
-
-                            <s_rp2_container>
-                              <!-- list-reply-comment -->
-                              <ul class="list-reply-comment">
-                                <s_rp2_rep>
-                                  <li id='[##_rp_rep_id_##]' class="item-reply [##_rp_rep_class_##]">
-                                    <span class="thumbnail" style="background-image:url('[##_rp_rep_logo_##]')"></span>
-                                    <div class="box-content">
-                                      <div class="box-meta">
-                                        <strong>[##_rp_rep_name_##]</strong>
-                                        <span class="date">[##_rp_rep_date_##]</span>
-                                      </div>
-                                      <p class="text">[##_rp_rep_desc_##]</p>
-
-                                    </div>
-                                  </li>
-                                </s_rp2_rep>
-                              </ul>
-                              <!-- // list-reply-comment -->
-                            </s_rp2_container>
-                          </li>
-                        </s_rp_rep>
-                      </ul>
-                    </s_rp_container>
                     <div class="article-reply">
                       <script>
                           let script = document.createElement('script');
                           script.setAttribute('src', "https://utteranc.es/client.js");
-                          script.setAttribute('repo', "Shane-Park/markdownBlog");
+                          script.setAttribute('repo', "ShanePark/markdownBlog");
                           script.setAttribute('issue-term', "pathname");
                           let theme = "github-" + (isDarkMode ? "dark" : "light");
                           script.setAttribute('theme', theme);
@@ -404,30 +376,7 @@
                           document.querySelector(".article-reply").append(script);
                       </script>
                     </div>
-                    <!-- // area-reply -->
-
-                    <s_rp_input_form>
-                      <!-- reply_write -->
-                      <form method="post">
-                        <div class="area-write" hidden>
-                          <s_rp_member>
-                            <s_rp_guest>
-                              <div class="box-account">
-                                <input type="text" name="[##_rp_input_name_##]" value="[##_guest_name_##]" title="이름"
-                                       placeholder="이름"/>
-                                <input type="password" name="[##_rp_input_password_##]" value="[##_rp_admin_check_##]"
-                                       title="비밀번호" maxlength="12" placeholder="비밀번호"/>
-                              </div>
-                            </s_rp_guest>
-                          </s_rp_member>
-
-
-                        </div>
-                      </form>
-                      <!-- // reply_write -->
-                    </s_rp_input_form>
                 </s_rp>
-
               </div>
               <!-- // article-reply -->
 
@@ -1026,6 +975,9 @@
 
 
 <!-- script 시작 -->
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <!-- toc bot -->
 <script>
@@ -1225,7 +1177,7 @@ function googleTranslateElementInit() {new google.translate.TranslateElement({pa
                     $(this).prev().remove();
                 }
                 $labelDiv.html('<span class="filename">' + fileName + '</span><span class="language">' + language + '</span>');
-                var $codeLabel = $('<div class="codeLabel">').append('<div class="traffic-light"><img src="./images/traffic.png"/></div>').append($labelDiv);
+                var $codeLabel = $('<div class="codeLabel">').append('<div class="traffic-light"><img src="./images/traffic.png" alt="traffic"/></div>').append($labelDiv);
                 $(this).before($codeLabel);
 
             }, 1000)
