--- a/blogskin/html.html
+++ b/blogskin/html.html
@@ -1160,35 +1160,53 @@ function googleTranslateElementInit() {new google.translate.TranslateElement({pa
       languageMap.set('kts', 'kotlin');
       languageMap.set('ts', 'typescript');
       languageMap.set('py', 'python');
-        setTimeout(() => {
-            $(".hljs").parent().each(function () {
-                const prevText = $(this).prev().text();
-                const code = this.dataset.keLanguage;
-                const $labelDiv = $("<div class='codelang'>");
-                const classes = $(this).find('code').attr('class').split(' ');
-                let language = '';
-                for (let i = 0; i < classes.length; i++) {
-                    if (classes[i].startsWith('language-')) {
-                        language = classes[i].substring(9);
-                        if (language == 'undefined') {
-                            language = '';
-                        }
-                        break;
-                    }
-                }
-                let fileName = ''
-                if (sameLanguage(prevText, language, languageMap)) {
-                    fileName = prevText;
-                    $(this).prev().remove();
-                }
-                $labelDiv.html('<span class="language">' + ( (fileName.length > 0) ? fileName : language ) + '</span>');
-                var $codeLabel = $('<div class="codeLabel focus">')
-                  .append('<div class="traffic-lights"><button class="traffic-light traffic-light-close" id="close"></button><button class="traffic-light traffic-light-minimize" id="minimize"></button><button class="traffic-light traffic-light-maximize" id="maximize"></button></div>')
-                  .append($labelDiv);
-                $(this).before($codeLabel);
+      setTimeout(() => {
+          $(".hljs").parent().each(function () {
+              const prevText = $(this).prev().text();
+              const code = this.dataset.keLanguage;
+              const $labelDiv = $("<div class='codelang'>");
+              const classes = $(this).find('code').attr('class').split(' ');
+              let language = '';
+              for (let i = 0; i < classes.length; i++) {
+                  if (classes[i].startsWith('language-')) {
+                      language = classes[i].substring(9);
+                      if (language == 'undefined') {
+                          language = '';
+                      }
+                      break;
+                  }
+              }
+              let fileName = ''
+              if (sameLanguage(prevText, language, languageMap)) {
+                  fileName = prevText;
+                  $(this).prev().remove();
+              }
+              $labelDiv.html('<span class="language">' + ( (fileName.length > 0) ? fileName : language ) + '</span>');
+              var $codeLabel = $('<div class="codeLabel focus">')
+                .append('<div class="traffic-lights"><button class="traffic-light traffic-light-close"/><button class="traffic-light traffic-light-minimize"/><button class="traffic-light traffic-light-maximize"/></div>')
+                .append($labelDiv);
+              $(this).before($codeLabel);
 
-            }, 1000)
-        })
+          }, 1000)
+      })   
+      $(document).on('click', '.traffic-light', function() {
+        let button;
+        if(this.classList.contains('traffic-light-maximize')) {
+          button = 'maximize';
+        }else if(this.classList.contains('traffic-light-minimize')) {
+          button = 'minimize';
+        }else {
+          button = 'close';
+        }
+        const codeLabel = this.closest('.codeLabel');
+        const code = codeLabel.nextElementSibling;
+        
+        codeLabel.classList.remove('maximize', 'minimize', 'close');
+        code.classList.remove('maximize', 'minimize', 'close');
+        codeLabel.classList.add(button);
+        code.classList.add(button);
+        
+      });    
     })
 
     function sameLanguage(prevText, language, languageMap) {
