chores: blog HTML edited, adsense manual alignment

--- a/blogskin/html.html
+++ b/blogskin/html.html
@@ -306,12 +306,14 @@
               <!-- 에디터 영역 -->
               <div class="article-view">
                 <ins class="adsbygoogle"
-                    style="display:block; text-align:center;"
-                    data-ad-layout="in-article"
-                    data-ad-format="fluid"
-                    data-ad-client="ca-pub-8627654774354950"
-                    data-ad-slot="9826884942">
-                </ins>
+                  style="display:block; text-align:center;"
+                  data-ad-layout="in-article"
+                  data-ad-format="fluid"
+                  data-ad-client="ca-pub-8627654774354950"
+                  data-ad-slot="9826884942"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
                 [##_article_rep_desc_##]
                 <ins class="adsbygoogle"
                   style="display:block; text-align:center;"
@@ -319,6 +321,9 @@
                   data-ad-format="fluid"
                   data-ad-client="ca-pub-8627654774354950"
                   data-ad-slot="6543064293"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
               </div>
 
               <!-- article-footer -->
@@ -377,6 +382,15 @@
                       </script>
                     </div>
                 </s_rp>
+                <!-- ad footer -->
+                <ins class="adsbygoogle"
+                  style="display:block"
+                  data-ad-format="autorelaxed"
+                  data-ad-client="ca-pub-8627654774354950"
+                  data-ad-slot="1816802485"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
               </div>
               <!-- // article-reply -->
 
@@ -909,21 +923,29 @@
         </div>
       </s_sidebar_element>
     </s_sidebar>
-    <!-- 달력 모듈
-    <s_sidebar>
-    <s_sidebar_element>
-
-    <div class="box-calendar">
-    <h3 class="title-sidebar"><span class="blind">Calendar</span></h3>
-    <div class="inner-calendar">[##_calendar_##]</div>
-        </div>
-        </s_sidebar_element>
-        </s_sidebar>
-    -->
+    <!-- ad side-1 -->
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-8627654774354950"
+        data-ad-slot="3513027534"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    <!-- ad side-2 -->
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-8627654774354950"
+        data-ad-slot="2829451507"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <!-- search-bar for MOBILE -->
     <div class="util use-sidebar">
       <div class="search">
-
         <input class="searchInput" type="text" name="search" value="" placeholder="검색내용을 입력하세요."
                onkeypress="if (event.keyCode==13) { requestSearch( '.util.use-sidebar .searchInput') }">
       </div>
@@ -973,12 +995,7 @@
 </div>
 <!-- 이미지 모달 끝 -->
 
-
 <!-- script 시작 -->
-<script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
 <!-- toc bot -->
 <script>
     function makeIds() { // eslint-disable-line
@@ -1016,15 +1033,6 @@
         hasInnerContainers: true,
     });
 </script>
-
-<!-- google translate -->
-<!--
-<script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-<script type="text/javascript">
-function googleTranslateElementInit() {new google.translate.TranslateElement({pageLanguage: 'ko', includedLanguages : 'en,ja,ko,es,zh-CN,ru', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');}
-</script>
--->
-<!-- google translate end -->
 
 <script>
     $(function () {
